--- a/src/index.css
+++ b/src/index.css
@@ -478,9 +478,71 @@
       background-color: green;
     }
 
+    .days1{
+      width: 1rem;
+    }
+
+    .hours1{
+      width: 0.2rem;
+    }
+
+    .hours{
+      width: 2rem;
+    }
+
     .Third-Background {
+      display: flex;
+      background-color: green;
       position: relative;
-      left: 9rem;
+      left: 0rem;
+    }
+
+    .CereImage img{
+      width: 2rem;
+    }
+
+    .p1 {
+      font-size: 10px;
+    }
+
+    .CereImage a {
+      font-size: 10px;
+    }
+
+    .Ceremony {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+     .Cheers {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+    .CereText h1{
+      font-size: 0.5rem;
+    }
+
+    .CereText h2{
+      font-size: 0.5rem;
+    }
+
+    .CereText p{
+      font-size: 0.5rem;
+    }
+
+     .CheersText h1{
+      font-size: 0.5rem;
+    }
+
+    .CheersText h2{
+      font-size: 0.5rem;
+    }
+
+    .CheersText p{
+      font-size: 0.5rem;
     }
 
     .Presents {
@@ -489,9 +551,32 @@
 
      .Fourth-Background {
       position: relative;
-      left: 9rem;
+      left: 0rem;
+      background-color: purple;
     }
 
+    .DressCode {
+      position: relative;
+      left: 2rem;
+      width: 15rem;
+    }
+
+    .DressCode p{
+      width: 15rem;
+    }
+
+    .Presents {
+      width: 18rem;
+    }
+
+    .Presents p{
+      font-size: 20px;
+      width: 18rem;
+    }
+
+    .presents-table img{
+      width: 2rem;
+    }
 
 
     .funny {
