--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,13 @@
 }
 
 
-
 .Second-Background {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 80px;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 
 .My-wedding {
@@ -154,7 +153,7 @@
   align-items: center;
   font-size: 80px;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 
 .Schedule {
@@ -258,7 +257,7 @@
   align-items: center;
   font-size: 80px;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 
 .DressCode {
@@ -362,7 +361,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 120vh;
 }
 
 .funny {
@@ -440,6 +439,7 @@
   width: 15rem;
 }
 
+
 @media (max-width: 320px){
   
 
@@ -451,7 +451,7 @@
     }
 
     .My-wedding{
-      font-size: 30px;
+      font-size: 50px;
     }
 
     .Date {
@@ -640,6 +640,207 @@
     .funny1 p {
       font-size: 10px;
     }
+}
+
+@media (min-width: 321px) {
+   .Second-Background{
+      display: flex;
+      background-color: yellow;
+      position: relative;
+      left: 0rem;
+    }
+
+    .My-wedding{
+      font-size: 10px;
+    }
+
+    .Date {
+      width: 10rem;
+      background-color: red;
+    }
+
+    .Date p{
+      font-size: 14px;
+    }
+
+    .Date h1{
+      font-size: 14px;
+    }
+
+    .Counter {
+      width: 10rem;
+      background-color: green;
+    }
+
+    .days1{
+      width: 1rem;
+    }
+
+    .hours1{
+      width: 0.2rem;
+    }
+
+    .hours{
+      width: 2rem;
+    }
+
+    .Third-Background {
+      display: flex;
+      background-color: green;
+      position: relative;
+      left: 0rem;
+    }
+
+    .CereImage img{
+      width: 2rem;
+    }
+
+    .p1 {
+      font-size: 10px;
+    }
+
+    .CereImage a {
+      font-size: 10px;
+    }
+
+    .Ceremony {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+     .Cheers {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+    .CereText h1{
+      font-size: 0.5rem;
+    }
+
+    .CereText h2{
+      font-size: 0.5rem;
+    }
+
+    .CereText p{
+      font-size: 0.5rem;
+    }
+
+     .CheersText h1{
+      font-size: 0.5rem;
+    }
+
+    .CheersText h2{
+      font-size: 0.5rem;
+    }
+
+    .CheersText p{
+      font-size: 0.5rem;
+    }
+
+    .Presents {
+      width: 35rem;
+    }
+
+     .Fourth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: purple;
+    }
+
+    .DressCode {
+      position: relative;
+      left: 2rem;
+      width: 15rem;
+    }
+
+    .DressCode p{
+      width: 15rem;
+    }
+
+    .Presents {
+      width: 18rem;
+    }
+
+    .Presents p{
+      font-size: 20px;
+      width: 18rem;
+    }
+
+    .presents-table img{
+      width: 2rem;
+    }
+
+    .Fifth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: orange;
+    }
+
+    .funny {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+    }
+
+    .funny img {
+      position: relative;
+    }
+
+    .funny p {
+      font-size: 10px;
+    }
+
+    .Form {
+      position: relative;
+      left: 0rem;
+      background-color: yellow;
+      width: 13rem;
+    }
+
+    .div .input {
+      width: 18rem;
+    }
+
+    #Si{
+      width: 18rem;
+    }
+
+    #No{
+      width: 18rem;
+    }
+
+    .div2 .input {
+      width: 18rem;
+    }
+
+    .Form form {
+      width: 18rem;
+      position: relative;
+      right: 2rem;
+      background-color: green;
+    }
+
+    .Form strong {
+      font-size: 1rem;
+    }
+
+    .Form input{
+      width: 20rem;
+    }
+
+    .funny1 {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+      background-color: blue;
+    }
+
+    .funny1 p {
+      font-size: 10px;
+    }
+
 }
 
 @media (min-width: 992px) {
