--- a/src/index.css
+++ b/src/index.css
@@ -555,6 +555,310 @@
 
     .Third-Background {
       display: flex;
+      position: relative;
+      left: 0rem;
+    }
+
+    .Schedule {
+      font-size: 55px;
+      position: relative;
+      left: 2rem;
+    }
+
+    .Schedule1 {
+      position: relative;
+      right: 0rem;
+      width: 20rem;
+    }
+
+    .CereImage {
+      position: relative;
+      right: 1.5rem;
+      width: 13rem;
+    }
+
+    .CereImage img{
+      width: 4rem;
+    }
+
+    .CereImage p{
+      font-size: 20px;
+    }
+
+    .p1 {
+      font-size: 10px;
+    }
+
+    .CereImage a {
+      font-size: 19px;
+    }
+
+    .Ceremony {
+      width: 18rem;
+      position: relative;
+      left: 2rem;
+    }
+
+     .Cheers {
+       width: 18rem;
+      position: relative;
+      left: 2rem;
+    }
+
+    .CereText {
+      width: 21rem;
+    }
+
+    .CereText h1{
+      font-size: 20px;
+    }
+
+    .CereText h2{
+      font-size: 18px;
+    }
+
+    .CereText p{
+      font-size: 16px;
+    }
+
+    .CheersText {
+      width: 21rem;
+    }
+
+     .CheersText h1{
+       font-size: 20px;
+    }
+
+    .CheersText h2{
+      font-size: 18px;
+    }
+
+    .CheersText p{
+      font-size: 16px;
+    }
+
+    .Presents {
+      width: 35rem;
+    }
+
+    .Flowers2 img {
+      width: 13rem;
+    }
+
+     .Fourth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: purple;
+    }
+
+    .DressCode {
+      position: relative;
+      left: 2rem;
+      width: 15rem;
+    }
+
+    .DressCode p{
+      width: 15rem;
+    }
+
+    .Presents {
+      width: 18rem;
+    }
+
+    .Presents p{
+      font-size: 20px;
+      width: 18rem;
+    }
+
+    .presents-table img{
+      width: 2rem;
+    }
+
+    .Fifth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: orange;
+    }
+
+    .funny {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+    }
+
+    .funny img {
+      position: relative;
+    }
+
+    .funny p {
+      font-size: 10px;
+    }
+
+    .Form {
+      position: relative;
+      left: 0rem;
+      background-color: yellow;
+      width: 13rem;
+    }
+
+    .div .input {
+      width: 18rem;
+    }
+
+    #Si{
+      width: 18rem;
+    }
+
+    #No{
+      width: 18rem;
+    }
+
+    .div2 .input {
+      width: 18rem;
+    }
+
+    .Form form {
+      width: 18rem;
+      position: relative;
+      right: 2rem;
+      background-color: green;
+    }
+
+    .Form strong {
+      font-size: 1rem;
+    }
+
+    .Form input{
+      width: 20rem;
+    }
+
+    .funny1 {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+      background-color: blue;
+    }
+
+    .funny1 p {
+      font-size: 10px;
+    }
+}
+
+@media (min-width: 321px){
+  
+
+    .Second-Background{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .My-wedding{
+      font-size: 57px;
+      position: relative;
+      left: 0.7rem;
+      bottom: 2.5rem;
+    }
+
+    .Date {
+      width: 20rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 2rem;
+    }
+
+    .Date p{
+      font-size: 23px;
+      position: relative;
+      right: 2rem;
+    }
+
+    .Date h1{
+      font-size: 25px;
+      position: relative;
+      left: 0.2rem;
+    }
+
+    .Guadalajara {
+      position: relative;
+      bottom: 0.2rem;
+    }
+
+
+    .Counter {
+      width: 19rem;
+      position: relative;
+      right: 0.8rem;
+    }
+
+    .days1{
+      width: 4rem;
+    }
+
+    .days {
+      font-size: 19px;
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+
+    .days1 small {
+      font-size: 16px;
+    }
+
+    .hours1{
+      width: 4rem;
+    }
+
+    .hours{
+      font-size: 19px;
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+
+    .hours1 small {
+      font-size: 16px;
+    }
+
+    .minutes1 {
+      width: 4rem;
+    }
+
+    .minutes{
+      font-size: 19px;
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+
+    .minutes1 small {
+      font-size: 16px;
+    }
+
+    .seconds1 {
+      width: 4rem;
+    }
+
+    .seconds{
+      font-size: 19px;
+      width: 2.8rem;
+      height: 2.8rem;
+    }
+
+    .seconds1 small {
+      font-size: 16px;
+    }
+
+    .Flowers img {
+      width: 14rem;
+      position: relative;
+      left: 0.5rem;
+    }
+
+
+    .Third-Background {
+      display: flex;
       background-color: green;
       position: relative;
       left: 0rem;
@@ -711,48 +1015,567 @@
     }
 }
 
-@media (min-width: 321px) {
-   .Second-Background{
+@media (min-width: 576px){
+  
+
+    .Second-Background{
       display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .My-wedding{
+      font-size: 63px;
+      position: relative;
+      left: 0.7rem;
+      bottom: 2.5rem;
+    }
+
+    .Date {
+      width: 20rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 2rem;
+    }
+
+    .Date p{
+      font-size: 26px;
+      position: relative;
+      right: 2rem;
+    }
+
+    .Date h1{
+      font-size: 28px;
+      position: relative;
+      left: 0.2rem;
+    }
+
+    .Guadalajara {
+      position: relative;
+      bottom: 0.2rem;
+    }
+
+
+    .Counter {
+      width: 32rem;
+      position: relative;
+      right: 0.8rem;
+    }
+
+    .days1{
+      width: 4rem;
+      position: relative;
+      left: 1.3rem;
+    }
+
+    .days {
+      font-size: 22px;
+      width: 3.3rem;
+      height: 3.3rem;
+    }
+
+    .days1 small {
+      font-size: 16px;
+    }
+
+    .hours1{
+      width: 4rem;
+      position: relative;
+      left: 1.3rem;
+    }
+
+    .hours{
+      font-size: 22px;
+      width: 3.3rem;
+      height: 3.3rem;
+    }
+
+    .hours1 small {
+      font-size: 16px;
+    }
+
+    .minutes1 {
+      width: 4rem;
+      position: relative;
+      left: 1.5rem;
+    }
+
+    .minutes{
+      font-size: 22px;
+      width: 3.3rem;
+      height: 3.3rem;
+    }
+
+    .minutes1 small {
+      font-size: 16px;
+    }
+
+    .seconds1 {
+      width: 4rem;
+      position: relative;
+      left: 2rem;
+    }
+
+    .seconds{
+      font-size: 22px;
+      width: 3.3rem;
+      height: 3.3rem;
+    }
+
+    .seconds1 small {
+      font-size: 16px;
+    }
+
+    .Flowers img {
+      width: 16rem;
+      position: relative;
+      left: 0.5rem;
+      top: 1rem;
+    }
+
+
+    .Third-Background {
+      display: flex;
+      background-color: green;
       position: relative;
       left: 0rem;
     }
 
-    .My-wedding{
-      font-size: 10px;
-    }
-
-    .Date {
-      width: 10rem;
-    }
-
-    .Date p{
-      font-size: 14px;
-    }
-
-    .Date h1{
-      font-size: 14px;
-    }
-
-    .Counter {
-      width: 10rem;
-    }
-
-    .days1{
-      width: 1rem;
-    }
-
-    .hours1{
-      width: 0.2rem;
-    }
-
-    .hours{
+    .CereImage img{
       width: 2rem;
     }
 
+    .p1 {
+      font-size: 10px;
+    }
+
+    .CereImage a {
+      font-size: 10px;
+    }
+
+    .Ceremony {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+     .Cheers {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+    .CereText h1{
+      font-size: 0.5rem;
+    }
+
+    .CereText h2{
+      font-size: 0.5rem;
+    }
+
+    .CereText p{
+      font-size: 0.5rem;
+    }
+
+     .CheersText h1{
+      font-size: 0.5rem;
+    }
+
+    .CheersText h2{
+      font-size: 0.5rem;
+    }
+
+    .CheersText p{
+      font-size: 0.5rem;
+    }
+
+    .Presents {
+      width: 35rem;
+    }
+
+     .Fourth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: purple;
+    }
+
+    .DressCode {
+      position: relative;
+      left: 2rem;
+      width: 15rem;
+    }
+
+    .DressCode p{
+      width: 15rem;
+    }
+
+    .Presents {
+      width: 18rem;
+    }
+
+    .Presents p{
+      font-size: 20px;
+      width: 18rem;
+    }
+
+    .presents-table img{
+      width: 2rem;
+    }
+
+    .Fifth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: orange;
+    }
+
+    .funny {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+    }
+
+    .funny img {
+      position: relative;
+    }
+
+    .funny p {
+      font-size: 10px;
+    }
+
+    .Form {
+      position: relative;
+      left: 0rem;
+      background-color: yellow;
+      width: 13rem;
+    }
+
+    .div .input {
+      width: 18rem;
+    }
+
+    #Si{
+      width: 18rem;
+    }
+
+    #No{
+      width: 18rem;
+    }
+
+    .div2 .input {
+      width: 18rem;
+    }
+
+    .Form form {
+      width: 18rem;
+      position: relative;
+      right: 2rem;
+      background-color: green;
+    }
+
+    .Form strong {
+      font-size: 1rem;
+    }
+
+    .Form input{
+      width: 20rem;
+    }
+
+    .funny1 {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+      background-color: blue;
+    }
+
+    .funny1 p {
+      font-size: 10px;
+    }
+}
+
+@media (min-width: 768px){
   
 
+    .Second-Background{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .My-wedding{
+      font-size: 73px;
+      position: relative;
+      left: 0.7rem;
+      bottom: 2.5rem;
+    }
+
+    .Date {
+      width: 22rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 2rem;
+    }
+
+    .Date p{
+      font-size: 30px;
+      position: relative;
+      right: 1.8rem;
+    }
+
+    .Date h1{
+      font-size: 33px;
+      position: relative;
+      left: 0.2rem;
+    }
+
+    .Guadalajara {
+      position: relative;
+      bottom: 0.2rem;
+    }
+
+
+    .Counter {
+      width: 44rem;
+      position: relative;
+      right: 0.8rem;
+      height: 6.5rem;
+    }
+
+    .days1{
+      width: 4rem;
+      position: relative;
+      left: 2.8rem;
+    }
+
+    .days {
+      font-size: 26px;
+      width: 3.8rem;
+      height: 3.8rem;
+    }
+
+    .days1 small {
+      font-size: 20px;
+    }
+
+    .hours1{
+      width: 4rem;
+      position: relative;
+      left: 3rem;
+    }
+
+    .hours{
+      font-size: 26px;
+      width: 3.8rem;
+      height: 3.8rem;
+    }
+
+    .hours1 small {
+      font-size: 20px;
+    }
+
+    .minutes1 {
+      width: 4rem;
+      position: relative;
+      left: 3.2rem;
+    }
+
+    .minutes{
+      font-size: 26px;
+      width: 3.8rem;
+      height: 3.8rem;
+    }
+
+    .minutes1 small {
+      font-size: 20px;
+    }
+
+    .seconds1 {
+      width: 4rem;
+      position: relative;
+      left: 3.8rem;
+    }
+
+    .seconds{
+      font-size: 26px;
+      width: 3.8rem;
+      height: 3.8rem;
+    }
+
+    .seconds1 small {
+      font-size: 20px;
+    }
+
+    .Flowers img {
+      width: 19rem;
+      position: relative;
+      left: 0.5rem;
+      top: 1rem;
+    }
+
+
+    .Third-Background {
+      display: flex;
+      background-color: green;
+      position: relative;
+      left: 0rem;
+    }
+
+    .CereImage img{
+      width: 2rem;
+    }
+
+    .p1 {
+      font-size: 10px;
+    }
+
+    .CereImage a {
+      font-size: 10px;
+    }
+
+    .Ceremony {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+     .Cheers {
+      width: 15rem;
+      position: relative;
+      left: 3rem;
+    }
+
+    .CereText h1{
+      font-size: 0.5rem;
+    }
+
+    .CereText h2{
+      font-size: 0.5rem;
+    }
+
+    .CereText p{
+      font-size: 0.5rem;
+    }
+
+     .CheersText h1{
+      font-size: 0.5rem;
+    }
+
+    .CheersText h2{
+      font-size: 0.5rem;
+    }
+
+    .CheersText p{
+      font-size: 0.5rem;
+    }
+
+    .Presents {
+      width: 35rem;
+    }
+
+     .Fourth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: purple;
+    }
+
+    .DressCode {
+      position: relative;
+      left: 2rem;
+      width: 15rem;
+    }
+
+    .DressCode p{
+      width: 15rem;
+    }
+
+    .Presents {
+      width: 18rem;
+    }
+
+    .Presents p{
+      font-size: 20px;
+      width: 18rem;
+    }
+
+    .presents-table img{
+      width: 2rem;
+    }
+
+    .Fifth-Background {
+      position: relative;
+      left: 0rem;
+      background-color: orange;
+    }
+
+    .funny {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+    }
+
+    .funny img {
+      position: relative;
+    }
+
+    .funny p {
+      font-size: 10px;
+    }
+
+    .Form {
+      position: relative;
+      left: 0rem;
+      background-color: yellow;
+      width: 13rem;
+    }
+
+    .div .input {
+      width: 18rem;
+    }
+
+    #Si{
+      width: 18rem;
+    }
+
+    #No{
+      width: 18rem;
+    }
+
+    .div2 .input {
+      width: 18rem;
+    }
+
+    .Form form {
+      width: 18rem;
+      position: relative;
+      right: 2rem;
+      background-color: green;
+    }
+
+    .Form strong {
+      font-size: 1rem;
+    }
+
+    .Form input{
+      width: 20rem;
+    }
+
+    .funny1 {
+      position: relative;
+      left: 0rem;
+      width: 18rem;
+      background-color: blue;
+    }
+
+    .funny1 p {
+      font-size: 10px;
+    }
 }
+
 
 @media (min-width: 992px) {
 
@@ -776,7 +1599,7 @@
     font-size: 80px;
     position: relative;
     bottom: 1.5rem;
-    right: 2rem;
+    left: -3rem;
     font-family: "Great Vibes", cursive;
     font-weight: 500;
   }
@@ -798,7 +1621,7 @@
 
   .Date h1 {
     position: relative;
-    left: 2.5rem;
+    left: 1rem;
     font-size: 35.5px;
   }
 
@@ -808,77 +1631,77 @@
   }
 
   .Counter {
-    width: 50rem;
-    height: 6.5rem;
+    width: 55rem;
+    height: 7.5rem;
     position: relative;
     top: 1rem;
-    right: 2rem;
+    right: 1rem;
   }
 
   .days1 {
     position: relative;
-    left: 2rem;
+    left: 3.5rem;
   }
 
   .days {
-    font-size: 27px;
-    width: 3.5rem;
-    height: 3.5rem;
+    font-size: 31px;
+    width: 4rem;
+    height: 4rem;
   }
 
   .days1 small {
-    font-size: 20px;
+    font-size: 25px;
     position: relative;
     top: 0.2rem;
   }
 
   .hours1 {
     position: relative;
-    left: 1.8rem;
+    left: 3.5rem;
   }
 
   .hours {
-    font-size: 27px;
-    width: 3.5rem;
-    height: 3.5rem;
+    font-size: 31px;
+    width: 4rem;
+    height: 4rem;
   }
 
   .hours1 small {
-    font-size: 20px;
+    font-size: 25px;
     position: relative;
     top: 0.2rem;
   }
 
   .minutes1 {
     position: relative;
-    left: 2.5rem;
+    left: 4.5rem;
   }
 
   .minutes {
-    font-size: 27px;
-    width: 3.5rem;
-    height: 3.5rem;
+    font-size: 31px;
+    width: 4rem;
+    height: 4rem;
   }
 
   .minutes1 small {
-    font-size: 20px;
+    font-size: 25px;
     position: relative;
     top: 0.2rem;
   }
 
   .seconds1 {
     position: relative;
-    left: 3rem;
+    left: 6rem;
   }
 
   .seconds {
-    font-size: 27px;
-    width: 3.5rem;
-    height: 3.5rem;
+    font-size: 31px;
+    width: 4rem;
+    height: 4rem;
   }
 
   .seconds1 small {
-    font-size: 20px;
+    font-size: 25px;
     position: relative;
     top: 0.2rem;
   }
@@ -886,13 +1709,13 @@
   .Flowers {
     position: relative;
     top: 2rem;
-    left: -2rem;
+    left: -4rem;
     width: 17rem;
     height: 5rem;
   }
 
   .Flowers img {
-    width: 19rem;
+    width: 23rem;
   }
 
   .Third-Background {
