--- a/src/index.css
+++ b/src/index.css
@@ -838,11 +838,13 @@
     #Si {
       position: relative;
       right: -0.1rem;
+      top: 0.1rem;
     }
 
     #No {
       position: relative;
        right: -0.1rem;
+       top: 0.1rem;
     }
 
 
