--- a/src/index.css
+++ b/src/index.css
@@ -1667,74 +1667,174 @@
       right: 1.2rem;
     }
 
-    .Fifth-Background {
+   .Fifth-Background {
       position: relative;
       left: 0rem;
-      background-color: orange;
     }
+
 
     .funny {
       position: relative;
       left: 0rem;
-      width: 18rem;
+      width: 24rem;
+    }
+
+    .funny .attendance {
+      font-size: 53px;
+      font-family: "Great Vibes", cursive;
+      position: relative;
+      bottom: 0.5rem;
+    }
+
+    .funny .phrase {
+      font-size: 22px;
+      position: relative;
+      bottom: 0.4rem;
+      width: 32rem;
     }
 
     .funny img {
       position: relative;
-    }
-
-    .funny p {
-      font-size: 10px;
+      width: 16rem;
     }
 
     .Form {
-      position: relative;
-      left: 0rem;
-      background-color: yellow;
-      width: 13rem;
-    }
-
-    .div .input {
-      width: 18rem;
-    }
-
-    #Si{
-      width: 18rem;
-    }
-
-    #No{
-      width: 18rem;
-    }
-
-    .div2 .input {
-      width: 18rem;
-    }
-
-    .Form form {
-      width: 18rem;
+      width: 32.5rem;
+      height: 22rem;
       position: relative;
       right: 2rem;
-      background-color: green;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      top: 0rem;
     }
 
-    .Form strong {
-      font-size: 1rem;
+    .Form form{
+      width: 30rem;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      right: 0rem;
     }
 
-    .Form input{
-      width: 20rem;
+    .confirmation input {
+      background-color: red;
     }
 
+
+    .options {
+      display: flex;
+    }
+
+    .div label {
+      font-size: 33px;
+    }
+
+
+    .div {
+      position: relative;
+      left: 2rem;
+      width: 17rem;
+      bottom: 1rem;
+    }
+
+    .input{
+      width: 27rem;
+      height: 2.5rem;
+    }
+
+    .div1 {
+      width: 28rem;
+      position: relative;
+      left: 2rem;
+      top: -0rem;
+    }
+
+    .div2 {
+      width: 17rem;
+    }
+
+    .yes {
+      width: 9rem;
+      display: flex;
+    }
+
+    
+    .no {
+      width: 10rem;
+      display: flex;
+      position: relative;
+      left: 2rem;
+    }
+
+    .yes label {
+      font-size: 25px;
+    }
+
+    .no label {
+      font-size: 25px;
+    }
+
+    #Si {
+      position: relative;
+      right: -0.3rem;
+      top: 0.2rem;
+    }
+
+    #No {
+      position: relative;
+       right: -0.3rem;
+       top: 0.2rem;
+    }
+
+
+    .input1 {
+      width: 2rem;
+    }
+
+    .input2 {
+      width: 2rem;
+    }
+
+    .div1 strong {
+      font-size: 33px;
+    }
+
+    .div2 {
+      position: relative;
+      left: 2rem;
+      top: 0.3rem;
+    }
+
+    .div2 label {
+      font-size: 33px;
+    }
+
+    .Form button {
+      position: relative;
+      left: 2.2rem;
+      width: 5rem;
+      height: 2.5rem;
+      font-size: 18px;
+    }
+   
     .funny1 {
       position: relative;
       left: 0rem;
       width: 18rem;
-      background-color: blue;
+    }
+
+    .funny1 img {
+      width: 16rem;
     }
 
     .funny1 p {
-      font-size: 10px;
+      font-size: 22px;
+      position: relative;
+      bottom: -0.4rem;
+      width: 32rem;
     }
+
 }
 
 @media (min-width: 768px){
@@ -2075,75 +2175,174 @@
       right: 1.2rem;
     }
 
-
     .Fifth-Background {
       position: relative;
       left: 0rem;
-      background-color: orange;
     }
+
 
     .funny {
       position: relative;
       left: 0rem;
-      width: 18rem;
+      width: 28rem;
+    }
+
+    .funny .attendance {
+      font-size: 63px;
+      font-family: "Great Vibes", cursive;
+      position: relative;
+      bottom: 0.5rem;
+    }
+
+    .funny .phrase {
+      font-size: 24px;
+      position: relative;
+      bottom: 0.4rem;
+      width: 38rem;
     }
 
     .funny img {
       position: relative;
-    }
-
-    .funny p {
-      font-size: 10px;
+      width: 17rem;
     }
 
     .Form {
-      position: relative;
-      left: 0rem;
-      background-color: yellow;
-      width: 13rem;
-    }
-
-    .div .input {
-      width: 18rem;
-    }
-
-    #Si{
-      width: 18rem;
-    }
-
-    #No{
-      width: 18rem;
-    }
-
-    .div2 .input {
-      width: 18rem;
-    }
-
-    .Form form {
-      width: 18rem;
+      width: 40rem;
+      height: 24rem;
       position: relative;
       right: 2rem;
-      background-color: green;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      top: 0rem;
     }
 
-    .Form strong {
-      font-size: 1rem;
+    .Form form{
+      width: 40rem;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      right: 0rem;
     }
 
-    .Form input{
-      width: 20rem;
+    .confirmation input {
+      background-color: red;
     }
 
+
+    .options {
+      display: flex;
+    }
+
+    .div label {
+      font-size: 36px;
+    }
+
+
+    .div {
+      position: relative;
+      left: 2rem;
+      width: 19rem;
+      bottom: 1rem;
+    }
+
+    .input{
+      width: 37rem;
+      height: 3rem;
+    }
+
+    .div1 {
+      width: 28rem;
+      position: relative;
+      left: 2rem;
+      top: -0rem;
+    }
+
+    .div2 {
+      width: 17rem;
+    }
+
+    .yes {
+      width: 9rem;
+      display: flex;
+    }
+
+    
+    .no {
+      width: 10rem;
+      display: flex;
+      position: relative;
+      left: 2rem;
+    }
+
+    .yes label {
+      font-size: 25px;
+    }
+
+    .no label {
+      font-size: 25px;
+    }
+
+    #Si {
+      position: relative;
+      right: -0.3rem;
+      top: 0.2rem;
+    }
+
+    #No {
+      position: relative;
+       right: -0.3rem;
+       top: 0.2rem;
+    }
+
+
+    .input1 {
+      width: 2rem;
+    }
+
+    .input2 {
+      width: 2rem;
+    }
+
+    .div1 strong {
+      font-size: 36px;
+    }
+
+    .div2 {
+      position: relative;
+      left: 2rem;
+      top: 0.3rem;
+    }
+
+    .div2 label {
+      font-size: 36px;
+    }
+
+    .Form button {
+      position: relative;
+      left: 2.2rem;
+      width: 5.9rem;
+      height: 3rem;
+      font-size: 21px;
+    }
+   
     .funny1 {
       position: relative;
       left: 0rem;
       width: 18rem;
-      background-color: blue;
+    }
+
+    .funny1 img {
+      width: 17rem;
     }
 
     .funny1 p {
-      font-size: 10px;
+      font-size: 22px;
+      position: relative;
+      bottom: -0.4rem;
+      width: 32rem;
     }
+
 }
 
 
@@ -2533,36 +2732,48 @@
     position: relative;
     bottom: 1.5rem;
     left: 0.5rem;
+    width: 29rem;
   }
 
-  .funny p{
+  .funny img {
+    width: 19rem;
+  }
+
+  .funny .phrase{
     font-size: 1.4rem;
-    width: 50rem;
+    width: 46rem;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    bottom: 1.6rem;
+    bottom: 1.2rem;
   }
 
   .Form {
     width: 48rem;
-    height: 22rem;
+    height: 28rem;
     position: relative;
-    bottom: 1.2rem;
+    top: -0.7rem;
+  }
+
+  .Form form{
+    position: relative;
+    right: 3rem;
   }
 
   .Form strong {
-    font-size: 2.3rem;
+    font-size: 2.4rem;
   }
 
   .Form input{
-    height: 2.2rem;
+    height: 2.5rem;
+    width: 42rem;
   }
 
   .div{
     position: relative;
     bottom: 0.7rem;
+    width: 20rem;
   }
 
   .div1 {
@@ -2577,16 +2788,16 @@
   }
 
   .options input {
-    width: 1.4rem;
-    height: 1.4rem;
+    width: 1.9rem;
+    height: 1.9rem;
     position: relative;
-    left: 0.3rem;
+    left: 1rem;
   }
 
   .options label {
     position: relative;
-    bottom: 0.3rem;
-    font-size: 1.25rem;
+    bottom: -0.1rem;
+    font-size: 1.65rem;
   }
 
   .no{
@@ -2606,24 +2817,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60rem;
+    width: 5d0rem;
   }
 
   .funny1 p{
     font-size: 1.5rem;
     position: relative;
-    top: 0.3rem;
+    top: 0.5rem;
+    width: 38rem;
   }
 
   .funny1 img {
     position: relative;
-    top: 0.1rem;
+    top: 0.2rem;
+    width: 19rem;
   }
 
   .Form button {
-    width: 5rem;
-    height: 2.3rem;
-    font-size: 1rem;
+    width: 6.7rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
   }
 
 }
